k8s/base/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: security-rule
  namespace: security-rule
  labels:
    app: security-rule
spec:
  replicas: 1
  selector:
    matchLabels:
      app: security-rule
  template:
    metadata:
      labels:
        app: security-rule
    spec:
      containers:
        - name: security-rule
          image: ghcr.io/ermak-p/securityrule:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 15
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 3
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
