k8s/base/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: security-rule
  namespace: security-rule
spec:
  selector:
    app: security-rule
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
